# Assistive-Racing

./: README.md
src/map_generator/: CMakeLists.txt  package.xml
src/map_generator/config/: global_params.yaml
src/map_generator/include/visualization/: visualization.hpp
src/map_generator/launch/: map_generate.launch  offline.rviz  offline_generate.launch  rviz.launch
src/map_generator/src/: offline_generator.cpp  racing_map.cpp
src/plan_assist/: CMakeLists.txt  package.xml
src/plan_assist/include/RC/: RC.h
src/plan_assist/include/corridor_helper/: corridor_helper.h
src/plan_assist/include/risk_opt/: risk_monitor.h
src/plan_assist/include/trajectory_utils/: poly_traj_utils.hpp  poly_traj_utils_7.hpp  polynomial.h  root_finder.hpp
src/plan_assist/src/: RC.cpp  corridor_helper.cpp  polynomial.cc  risk_monitor.cpp
src/plan_manage/: CMakeLists.txt  package.xml
src/plan_manage/config/: gate.yaml  planner_params.yaml
src/plan_manage/include/plan_manage/: plan_manage.h
src/plan_manage/launch/: rviz.launch  test.launch  test.rviz
src/plan_manage/src/: fake_circle_node.cpp  main.cpp  plan_manage.cpp
src/traj_opt/: CMakeLists.txt  package.xml
src/traj_opt/include/minco/: banded_system.hpp  minco_time_uniform.hpp  minco_time_varied.hpp  minco_yaw_time_uniform.hpp  minco_yaw_time_varied.hpp
src/traj_opt/include/traj_opt/: chalk.hpp  config.hpp  flatness.hpp  global_traj_opt.h  lc_yaw_traj_opt_varied.h  uniform_minco_emergency.h  uniform_minco_progress.h
src/traj_opt/include/visualization/: visualization.hpp
src/traj_opt/src/: global_traj_opt.cc  lc_yaw_traj_opt_varied.cc  uniform_minco_emergency.cc  uniform_minco_progress.cc
src/uav_simulator/joy_to_mavros/: CMakeLists.txt  package.xml
src/uav_simulator/joy_to_mavros/config/: blacksheep.yaml  jumper.yaml  xbox.yaml
src/uav_simulator/joy_to_mavros/launch/: blacksheep.launch  jumper.launch  xbox.launch
src/uav_simulator/joy_to_mavros/src/: joy.cpp  joy.h  joy_to_mavros_node.cpp
src/uav_simulator/so3_controller/src/: so3_controller_nodelet.cpp
src/uav_simulator/so3_quadrotor/include/so3_quadrotor/: quadrotor_dynamics.hpp
src/uav_simulator/so3_quadrotor/src/: so3_quadrotor_nodelet.cpp
src/uav_simulator/uav_simulator/launch/: sim_map.launch
src/uav_utils/DecompROS/decomp_ros_msgs/msg/: PolyhedronArray.msg
src/uav_utils/quadrotor_msgs/: CMakeLists.txt
src/uav_utils/quadrotor_msgs/msg/: DebugData.msg  HpolyTimeSerial.msg  MPCReferenceState.msg  PositionCommand.msg  RiskDebug.msg
src/uav_utils/traj_server/src/: traj_server.cpp
