<?xml version="1.0"?>
<package format="2">
  <name>plan_assist</name>
  <version>0.0.0</version>
  <description>The plan_assist package</description>
  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uav_utils</build_depend>
  <!-- <build_depend>traj_opt</build_depend> -->
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uav_utils</exec_depend>
  <!-- <exec_depend>traj_opt</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
